# cryptdoc

./: .gitignore  Cargo.toml  README.md  secret.txt
src/: main.rs
tests/: integrations.rs
